--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,47 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.container {
+	border: 1px solid red;
+	padding: 30px 60px;
+}
+.navigation {
+	background: pink;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.navigation nav {
+	display: flex;
+	width: 80%;
+	justify-content: space-between;
+	
+}
+.navigation a {
+	text-decoration: none;
+}
+header {
+	background: orange;
+	display: flex;
+	margin-top: 80px;
+}
+.left {
+	width: 50%;
+	display: flex;
+	flex-direction: row;	
+	text-align: center;
+}
+.title {
+	display: flex;
+	flex-direction: row;
+	align-content: center;
+}
+header .left h1 {
+	font-size: 70px;
+}
+.right {
+	width: 50%;
+	background: lightblue;
+	display: flex;
+	justify-content: flex-end; 
+}
