--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -65,6 +65,7 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 .container {
+	background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 	width: 1000px;
 	margin: 0 auto;
 	padding: 0 65px;
@@ -74,7 +75,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	margin: 25px 0;
+	padding: 25px 0;
 }
 nav {
 	width: 70%;
@@ -84,7 +85,7 @@ nav {
 }
 nav a {
 	text-decoration: none;
-	color: grey;
+	color: white;
 	opacity: 0.7;
 }
 
@@ -163,13 +164,18 @@ footer {
 	align-content: space-between;
 	padding: 35px 0;
 	border-bottom: 2px solid;
+	color: white;
+	opacity: 0.8;
+}
+.main-content h2 {
+	color: black;
 }
 .main-content div {
 	border: 1px solid;
 	height: 230px;
 	width: 48%;
 	padding: 20px 15px;
-	background: #F3F2F5;
+	background: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 }
 .btn {
 	font-size: 10px;
@@ -177,6 +183,7 @@ footer {
 	border-radius: 5px;
 	border: 1px solid;
 	margin-top: 25px;
+	background: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 }
 
 section {
@@ -198,6 +205,8 @@ section ol {
 }
 .services-info-img {
 	width: 48%;
+	border-radius: 10px;
+	opacity: 0.9;
 }
 #copyright2 {
 	padding: 80px 0 25px 0;
